--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Joerie de Gram <j.de.gram@gmail.com>
-PaulK <contact@paulk.fr>
+Paul Kocialkowski <contact@paulk.fr>
 Simon Busch <morphis@gravedo.de>
+Sergey Gridasov <grindars@gmail.com>
+Alexander Tarasikov <alexander.tarasikov@gmail.com>
