Update list of authors based on git history
Signed-off-by: Simon Busch <morphis@gravedo.de>

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,6 @@ Paul Kocialkowski <contact@paulk.fr>
 Simon Busch <morphis@gravedo.de>
 Sergey Gridasov <grindars@gmail.com>
 Alexander Tarasikov <alexander.tarasikov@gmail.com>
+Igor Almeida <igor.contato@gmail.com>
+Denis 'GNUtoo' Carikli <GNUtoo@no-log.org>
+Julian Cromarty <julian.cromarty@gmail.com>
